<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_name_book" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textAlignment="center"
            android:text="@string/name_book"/>
    <TextView
            android:text="@string/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_authors"
            app:layout_constraintTop_toBottomOf="@+id/textView_name_book" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_pages" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name_book" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Switch
            android:text="@string/is_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_isRead" app:layout_constraintStart_toEndOf="@+id/textView_authors"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textView_pages"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_name_book"
            app:layout_constraintHorizontal_bias="0.454" android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>